@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-06T01:01:33Z",
+  "timestamp" : "2024-03-06T08:18:59Z",
   "count_outdated" : 1071,
   "uniques_outdated" : 624,
-  "count" : 1099,
-  "uniques" : 638,
+  "count" : 1100,
+  "uniques" : 639,
   "clones" : [
     {
       "timestamp": "2024-02-21T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
