@@ -1,3 +1,12 @@
+2024-03-06T08:18:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8168936141 # 178
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
+* notice: last 14d: unq all: 1 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 624 1071 / 638 1099
+* notice: next accum: outdated-unq outdated-all / unq all: 624 1071 / 639 1100
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-03-06]
+
 2024-03-06T01:01:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8165302932 # 177
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
